--- a/Web-App/Cyberfort-React-App/public/Games/Phishing_game_Latest/Backend/package.json
+++ b/Web-App/Cyberfort-React-App/public/Games/Phishing_game_Latest/Backend/package.json
@@ -12,10 +12,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "huggingface": "^1.4.0",
     "mongodb": "^6.12.0",
     "mongoose": "^8.8.4",
     "node-fetch": "^2.7.0",
-    "openai": "^4.76.1"
+    "openai": "^4.76.1",
+    "transformers": "^3.1.0"
   },
   "description": ""
 }
